[project]
name = "tennetctl"
version = "0.0.1"
description = "tennetctl — S-Control platform CLI and backend"
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "asyncpg>=0.30.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=43.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "redis[hiredis]>=5.0.0",
]

[project.scripts]
tennetctl = "scripts.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "04_backend"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]
